--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
 files/
 log/
+db/development.sqlite3.old
+db/*.sqlite3
+db/schema.rb
 public/assets/
 tmp/
-/.bundle
-/db/*.sqlite3
-/log/*.log
+.bundle
 .DS_Store
-db/development.sqlite3.old
-/db/schema.rb
