--- a/config/database.yml
+++ b/config/database.yml
@@ -15,8 +15,17 @@ test:
   pool: 5
   timeout: 5000
 
-production:
+production2:
   adapter: sqlite3
   database: db/production.sqlite3
   pool: 5
   timeout: 5000
+
+production:
+  adapter: mysql2
+  encoding: utf8
+  database: mintoffice
+  pool: 5
+  username: root
+  password: pcyd0fhf
+  socket: /var/run/mysqld/mysqld.sock
