--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 files/
 log/
 config/database.yml
-config/google_apps.yml
-config/redmine.yml
+config/oauth_key.yml
 db/development.sqlite3.old
 db/*.sqlite3
 db/schema.rb
