--- a/test/fixtures/companies.yml
+++ b/test/fixtures/companies.yml
@@ -1,3 +1,20 @@
 fixture:
   id: 1
-  name: "mintech"
+  name: mintech
+  created_at: 2012-07-18 16:07:56.123710
+  updated_at: 2012-07-18 16:07:56.123710
+  pay_basic_date: 20
+  payday: 25
+  registration_number: 123-12-1234567
+  owner_name: 왕수용
+  address: 가산동 가산디지털단지
+  phone_number: 02-123-1234
+  google_apps_domain: wangsy.com
+  google_apps_username: zzilssun
+  google_apps_password: 1234
+  redmine_domain: redmine.mintech.kr
+  redmine_username: zzilssun
+  redmine_password: 1234
+  default_password: 1234
+  apply_admin_id: 1
+  enrollment_items: 이력서
