--- a/test/fixtures/vacations.yml
+++ b/test/fixtures/vacations.yml
@@ -1,3 +1,8 @@
 fixture:
-    id: 1
-    user_id: 1
+  id: 1
+  user_id: 1
+  from: 2012-07-18
+  to: 2013-07-17
+  period: 10
+  created_at: 2012-07-18 17:03:27.833767
+  updated_at: 2012-07-18 17:03:27.833767
