--- a/test/fixtures/permissions.yml
+++ b/test/fixtures/permissions.yml
@@ -3,3 +3,9 @@ fixture:
   name: "bank_accounts"
   created_at: 2012-07-18 16:08:13.066854
   updated_at: 2012-07-18 16:08:13.066854
+
+commutes:
+  id: 2
+  name: "commutes"
+  created_at: 2012-07-18 16:08:13.066854
+  updated_at: 2012-07-18 16:08:13.066854
