--- a/test/fixtures/permissions.yml
+++ b/test/fixtures/permissions.yml
@@ -9,3 +9,9 @@ commutes:
   name: "commutes"
   created_at: 2012-07-18 16:08:13.066854
   updated_at: 2012-07-18 16:08:13.066854
+
+pettycashes:
+  id: 3
+  name: "pettycashes"
+  created_at: 2012-07-18 16:08:13.066854
+  updated_at: 2012-07-18 16:08:13.066854
