--- a/test/fixtures/cardbills.yml
+++ b/test/fixtures/cardbills.yml
@@ -1,2 +1,31 @@
-fixture:
+has_permission_cardbill:
   id: 1
+  cardno:
+  transdate: <%= Time.zone.now %>
+  amount: 5800
+  vat: 1000
+  servicecharge: 300
+  totalamount: 4500
+  storename: GS25
+  storeaddr: sk트윈타워 A동
+  approveno: 1
+  created_at: <%= Time.zone.now %>
+  updated_at: <%= Time.zone.now %>
+  attachment_id:
+  creditcard_id: 1
+
+has_not_permission_cardbill:
+  id: 2
+  cardno:
+  transdate: <%= Time.zone.now %>
+  amount: 5800
+  vat: 1000
+  servicecharge: 300
+  totalamount: 4500
+  storename: 훼미리마트
+  storeaddr: sk트윈타워 B동
+  approveno: 2
+  created_at: <%= Time.zone.now %>
+  updated_at: <%= Time.zone.now %>
+  attachment_id:
+  creditcard_id: 1
