--- a/test/fixtures/groups.yml
+++ b/test/fixtures/groups.yml
@@ -1,5 +1,11 @@
-fixture:
+admin:
   id: 1
   name: "admin"
+  created_at: 2012-07-18 16:08:13.062284
+  updated_at: 2012-07-18 16:08:13.062284
+
+no_admin:
+  id: 2
+  name: "no_admin"
   created_at: 2012-07-18 16:08:13.062284
   updated_at: 2012-07-18 16:08:13.062284
