--- a/test/fixtures/permissions_users.yml
+++ b/test/fixtures/permissions_users.yml
@@ -9,3 +9,11 @@ commutes:
 pettycashes:
   permission_id: 3
   user_id: 1
+
+cardbills:
+  permission_id: 4
+  user_id: 1
+
+expenses:
+  permission_id: 5
+  user_id: 1
