--- a/test/fixtures/bank_transactions.yml
+++ b/test/fixtures/bank_transactions.yml
@@ -1,3 +1,17 @@
 fixture:
     id: 1
     bank_account_id: 1
+    transacted_at: 2012-04-16 10:57:18.000000
+    transaction_type: 이자
+    in: 13993
+    out: 0
+    note: 2012년결산
+    remain: 165
+    branchname: 
+    created_at: <%= Time.zone.now %>
+    updated_at: <%= Time.zone.now %>
+    out_bank_account:
+    out_bank_name:
+    promissory_check_amount:
+    cms_code:
+    transact_order: 0
