--- a/test/fixtures/bank_transfers.yml
+++ b/test/fixtures/bank_transfers.yml
@@ -1,3 +1,21 @@
 fixture:
     id: 1
     bank_account_id: 1
+    transfer_type: 타행이체
+    transfered_at: <%= Time.zone.now %>
+    result: 거래완료
+    out_bank_account: 274-062855-01-012
+    in_bank_name: 신한은행
+    in_bank_account: 28505013648
+    money: 1000000
+    transfer_fee: 500
+    error_money: 0
+    registered_at: <%= Time.zone.now %>
+    error_code:
+    transfer_note:
+    incode:
+    out_account_note: "(주) 민트기술"
+    in_account_note: "(주) 민트기술"
+    in_person_name: "(주) 민트기술"
+    cms_code: 
+    currency_code: KRW
