--- a/test/fixtures/access_people.yml
+++ b/test/fixtures/access_people.yml
@@ -1,8 +1,17 @@
-admin_read_access_cardbill_1:
+admin_write_access_cardbill:
   id: 1
   user_id: 1
   access_target_id: 1
   access_target_type: Cardbill
+  access_type: write
+  created_at: <%= Time.zone.now %>
+  updated_at: <%= Time.zone.now %>
+
+admin_write_access_document:
+  id: 2
+  user_id: 1
+  access_target_id: 1
+  access_target_type: Document
   access_type: write
   created_at: <%= Time.zone.now %>
   updated_at: <%= Time.zone.now %>
