--- a/test/fixtures/documents.yml
+++ b/test/fixtures/documents.yml
@@ -1,4 +1,8 @@
 fixture:
   id: 1
+  title: 테스트 문서
+  project_id: 1
+  created_at: <%= Time.zone.now %>
+  updated_at: <%= Time.zone.now %>
   company_id: 1
-  title: "HAHA"
+  
