--- a/test/fixtures/access_people.yml
+++ b/test/fixtures/access_people.yml
@@ -1,6 +1,6 @@
 admin_write_access_cardbill:
   id: 1
-  user_id: 1
+  person_id: 1
   access_target_id: 1
   access_target_type: Cardbill
   access_type: write
@@ -9,7 +9,7 @@ admin_write_access_cardbill:
 
 admin_write_access_document:
   id: 2
-  user_id: 1
+  person_id: 1
   access_target_id: 1
   access_target_type: Document
   access_type: write
