--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -5,9 +5,16 @@ admin_account:
     hashed_password: "96043f0adf13e8d440a0e90ec7a2b7757a16bc2c"
     salt: "21757029800.1164294613723833"
 
-no_employee:
+normal_account:
     id: 2
     person_id: 2
+    name: "normal"
+    hashed_password: "1234"
+    salt: "q"
+
+no_employee:
+    id: 3
+    person_id: 3
     name: "no employee"
     hashed_password: "1234"
     salt: "q"
