--- a/test/fixtures/employees.yml
+++ b/test/fixtures/employees.yml
@@ -14,3 +14,20 @@ fixture:
   listed: f
   department: 민트기술
   employment_proof_hash: 
+
+normal:
+  id: 2
+  firstname: 개똥
+  lastname: 김
+  picture_id: 
+  created_at: 2012-07-18 16:17:56.775700
+  updated_at: 2012-07-20 13:36:03.201237
+  joined_on: 2012-07-18
+  retired_on:
+  person_id: 2
+  position: 사원
+  companyno: 1
+  juminno: 123456-1234568
+  listed: f
+  department: 민트기술
+  employment_proof_hash: 
