--- a/test/fixtures/report_people.yml
+++ b/test/fixtures/report_people.yml
@@ -1,9 +1,8 @@
 admin_has_document:
   id: 1
-  user_id: 1
+  person_id: 1
   report_id: 2
   prev_id:
   created_at: <%= Time.zone.now %>
   updated_at: <%= Time.zone.now %>
-  permission_type: read
   owner: t
