--- a/test/fixtures/permissions.yml
+++ b/test/fixtures/permissions.yml
@@ -45,3 +45,9 @@ projects:
   name: "projects"
   created_at: 2012-07-18 16:08:13.066854
   updated_at: 2012-07-18 16:08:13.066854
+
+business_clients:
+  id: 9
+  name: "business_clients"
+  created_at: 2012-07-18 16:08:13.066854
+  updated_at: 2012-07-18 16:08:13.066854
