--- a/test/fixtures/taxmen.yml
+++ b/test/fixtures/taxmen.yml
@@ -1,3 +1,9 @@
 fixture:
     id: 1
     business_client_id: 1
+    fullname: 왕 수용
+    email: wangsy@wangsy.com
+    phonenumber: 010-123-1234
+    created_at: <%= Time.zone.now %>
+    updated_at: <%= Time.zone.now %>
+    person_id: 1
