--- a/test/fixtures/taxbills.yml
+++ b/test/fixtures/taxbills.yml
@@ -1,3 +1,15 @@
-fixture:
+purchase:
     id: 1
+    billtype: purchase
+    transacted_at: <%= Time.zone.now %>
     taxman_id: 1
+    created_at: <%= Time.zone.now %>
+    updated_at: <%= Time.zone.now %>
+
+sale:
+    id: 2
+    billtype: sale
+    transacted_at: <%= Time.zone.now %>
+    taxman_id: 1
+    created_at: <%= Time.zone.now %>
+    updated_at: <%= Time.zone.now %>
