--- a/test/fixtures/ledger_accounts.yml
+++ b/test/fixtures/ledger_accounts.yml
@@ -1,2 +1,13 @@
-fixture:
+cash:
     id: 1
+    title: 현금
+    category: 0
+    created_at: <%= Time.zone.now %>
+    updated_at: <%= Time.zone.now %>
+
+card:
+    id: 2
+    title: 신용카드
+    category: 2
+    created_at: <%= Time.zone.now %>
+    updated_at: <%= Time.zone.now %>
