--- a/test/fixtures/report_people.yml
+++ b/test/fixtures/report_people.yml
@@ -1,7 +1,25 @@
 admin_has_document:
   id: 1
   person_id: 1
+  report_id: 1
+  prev_id:
+  created_at: <%= Time.zone.now %>
+  updated_at: <%= Time.zone.now %>
+  owner: t
+
+admin_has_export_report:
+  id: 2
+  person_id: 1
   report_id: 2
+  prev_id:
+  created_at: <%= Time.zone.now %>
+  updated_at: <%= Time.zone.now %>
+  owner: t
+
+admin_has_cardbill:
+  id: 3
+  person_id: 1
+  report_id: 3
   prev_id:
   created_at: <%= Time.zone.now %>
   updated_at: <%= Time.zone.now %>
