--- a/test/fixtures/reports.yml
+++ b/test/fixtures/reports.yml
@@ -1,11 +1,17 @@
-expense_report:
+document:
     id: 1
+    target_id: 1
+    target_type: "Document"
+    status: "not_reported"
+
+expense_report:
+    id: 2
     target_id: 1
     target_type: "ExpenseReport"
     status: "not_reported"
-    
-document:
-    id: 2
-    target_id: 1
-    target_type: "Document"
+
+cardbill:
+    id: 3
+    target_id: 2
+    target_type: "ExpenseReport"
     status: "not_reported"
