--- a/test/fixtures/expense_reports.yml
+++ b/test/fixtures/expense_reports.yml
@@ -17,7 +17,7 @@ bankTransfer:
     target_type: "BankTransfer"
     project_id: 1
     description: 이체내역 지출내역서
-    amount: 999500
+    amount: 1000000
     created_at: <%= Time.zone.now %>
     updated_at: <%= Time.zone.now %>
     expensed_at: <%= Time.zone.now %>
