--- a/test/fixtures/attachments.yml
+++ b/test/fixtures/attachments.yml
@@ -1,5 +1,13 @@
 fixture:
   id: 1
-  filepath: "seal.png"
+  title:
+  comments:
+  filepath: 120731092154_Untitled.png
+  created_at: <%= Time.zone.now %>
+  updated_at: <%= Time.zone.now %>
+  contenttype: image/png
   owner_type: "Company"
   owner_id: 1
+  original_filename: Untitled.png
+  seq:
+  employee_id: 1
