modify failed test

--- a/test/fixtures/permissions.yml
+++ b/test/fixtures/permissions.yml
@@ -28,15 +28,15 @@ expenses:
   created_at: 2012-07-18 16:08:13.066854
   updated_at: 2012-07-18 16:08:13.066854
 
-bank_trasacions:
+bank_transactions:
   id: 6
-  name: "bank_trasacions"
+  name: "bank_transactions"
   created_at: 2012-07-18 16:08:13.066854
   updated_at: 2012-07-18 16:08:13.066854
 
-bank_trasfers:
+bank_transfers:
   id: 7
-  name: "bank_trasfers"
+  name: "bank_transfers"
   created_at: 2012-07-18 16:08:13.066854
   updated_at: 2012-07-18 16:08:13.066854
 
