--- a/test/fixtures/permissions_users.yml
+++ b/test/fixtures/permissions_users.yml
@@ -18,11 +18,11 @@ expenses:
   permission_id: 5
   user_id: 1
 
-bank_trasactions:
+bank_transactions:
   permission_id: 6
   user_id: 1  
 
-bank_trasfers:
+bank_transfers:
   permission_id: 7
   user_id: 1
 
