--- a/test/fixtures/hrinfos.yml
+++ b/test/fixtures/hrinfos.yml
@@ -14,3 +14,88 @@ fixture:
   listed: f
   department: 민트기술
   employment_proof_hash: 
+
+normal:
+  id: 2
+  firstname: 개똥
+  lastname: 김
+  picture_id: 
+  created_at: 2012-07-18 16:17:56.775700
+  updated_at: 2012-07-20 13:36:03.201237
+  joined_on: 2012-07-18
+  retired_on:
+  user_id: 2
+  position: 사원
+  companyno: 2
+  juminno: 123456-1234568
+  listed: f
+  department: 민트기술
+  employment_proof_hash: 
+
+card_bill_manager:
+  id: 3
+  firstname: 카드영수증
+  lastname: 매니저
+  picture_id: 
+  created_at: 2012-07-18 16:17:56.775700
+  updated_at: 2012-07-20 13:36:03.201237
+  joined_on: 2012-07-18
+  retired_on:
+  user_id: 3
+  position: 관리자
+  companyno: 3
+  juminno: 123456-1234569
+  listed: f
+  department: 경리부
+  employment_proof_hash: 
+
+card_used_user:
+  id: 4
+  firstname: 카드
+  lastname: 사용자
+  picture_id: 
+  created_at: 2012-07-18 16:17:56.775700
+  updated_at: 2012-07-20 13:36:03.201237
+  joined_on: 2012-07-18
+  retired_on:
+  user_id: 4
+  position: 사원
+  companyno: 4
+  juminno: 123456-1234560
+  listed: f
+  department: 경리부
+  employment_proof_hash: 
+
+join:
+  id: 5
+  firstname: A
+  lastname: B
+  picture_id: 
+  created_at: 2012-07-18 16:17:56.775700
+  updated_at: 2012-07-20 13:36:03.201237
+  joined_on: <%= Time.zone.now %>
+  retired_on:
+  user_id: 4
+  position: 사원
+  companyno: 5
+  juminno: 830101-1010110
+  listed: f
+  department: 경리부
+  employment_proof_hash: 
+
+retire:
+  id: 6
+  firstname: A
+  lastname: B
+  picture_id: 
+  created_at: 2012-07-18 16:17:56.775700
+  updated_at: 2012-07-20 13:36:03.201237
+  joined_on: <%= Time.zone.now %>
+  retired_on: <%= Time.zone.now %>
+  user_id: 4
+  position: 사원
+  companyno: 6
+  juminno: 830101-1010111
+  listed: f
+  department: 경리부
+  employment_proof_hash: 
