--- a/test/fixtures/companies_users.yml
+++ b/test/fixtures/companies_users.yml
@@ -5,3 +5,11 @@ fixture:
 normal:
   company_id: 1
   user_id: 2
+
+card_manager:
+  company_id: 1
+  user_id: 3
+
+card_user:
+  company_id: 1
+  user_id: 4
