--- a/test/fixtures/hrinfos.yml
+++ b/test/fixtures/hrinfos.yml
@@ -34,8 +34,8 @@ normal:
 
 card_bill_manager:
   id: 3
-  firstname: 카드영수증
-  lastname: 매니저
+  firstname: 매니저
+  lastname: 카드영수증
   picture_id: 
   created_at: 2012-07-18 16:17:56.775700
   updated_at: 2012-07-20 13:36:03.201237
@@ -51,8 +51,8 @@ card_bill_manager:
 
 card_used_user:
   id: 4
-  firstname: 카드
-  lastname: 사용자
+  firstname: 사용자
+  lastname: 카드
   picture_id: 
   created_at: 2012-07-18 16:17:56.775700
   updated_at: 2012-07-20 13:36:03.201237
