closes #10027, closes #10033, closes #10037

--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -26,3 +26,4 @@ has_google_apps_account:
     name: "has_google_apps_account"
     hashed_password: "96043f0adf13e8d440a0e90ec7a2b7757a16bc2c"
     salt: "21757029800.1164294613723833"
+    google_account: has_google_apps_account@wangsy.com
