--- a/test/fixtures/permissions.yml
+++ b/test/fixtures/permissions.yml
@@ -52,8 +52,20 @@ business_clients:
   created_at: 2012-07-18 16:08:13.066854
   updated_at: 2012-07-18 16:08:13.066854
 
-creditcards:
+taxbills:
   id: 10
-  name: "creditcards"
+  name: "taxbills"
+  created_at: 2012-07-18 16:08:13.066854
+  updated_at: 2012-07-18 16:08:13.066854
+
+postings:
+  id: 11
+  name: "postings"
+  created_at: 2012-07-18 16:08:13.066854
+  updated_at: 2012-07-18 16:08:13.066854
+
+ledger_accounts:
+  id: 12
+  name: "ledger_accounts"
   created_at: 2012-07-18 16:08:13.066854
   updated_at: 2012-07-18 16:08:13.066854
