change fixture closes. #10044

--- a/test/fixtures/companies_people.yml
+++ b/test/fixtures/companies_people.yml
@@ -5,3 +5,11 @@ fixture:
 normal:
   company_id: 1
   person_id: 2
+
+card_manager:
+  company_id: 1
+  person_id: 3
+
+card_user:
+  company_id: 1
+  person_id: 4
