--- a/test/fixtures/access_people.yml
+++ b/test/fixtures/access_people.yml
@@ -7,8 +7,17 @@ admin_write_access_cardbill:
   created_at: <%= Time.zone.now %>
   updated_at: <%= Time.zone.now %>
 
-admin_write_access_document:
+admin_write_manager_cardbill:
   id: 2
+  person_id: 3
+  access_target_id: 1
+  access_target_type: Cardbill
+  access_type: write
+  created_at: <%= Time.zone.now %>
+  updated_at: <%= Time.zone.now %>
+
+admin_write_access_document:
+  id: 3
   person_id: 1
   access_target_id: 1
   access_target_type: Document
