--- a/test/fixtures/accounts.yml
+++ b/test/fixtures/accounts.yml
@@ -1,29 +1,42 @@
 admin_account:
     id: 1
-    person_id: 1
     name: "admin"
+    person_id: 1
     hashed_password: "96043f0adf13e8d440a0e90ec7a2b7757a16bc2c"
     salt: "21757029800.1164294613723833"
 
 normal_account:
     id: 2
-    person_id: 2
     name: "normal"
+    person_id: 2
     hashed_password: "96043f0adf13e8d440a0e90ec7a2b7757a16bc2c"
     salt: "21757029800.1164294613723833"
 
-no_employee:
+card_manager_account:
     id: 3
+    name: "card_manager"
     person_id: 3
+    hashed_password: "96043f0adf13e8d440a0e90ec7a2b7757a16bc2c"
+    salt: "21757029800.1164294613723833"    
+
+card_user_account:
+    id: 4
+    name: "card_user"
+    person_id: 4
+    hashed_password: "96043f0adf13e8d440a0e90ec7a2b7757a16bc2c"
+    salt: "21757029800.1164294613723833"    
+
+no_employee:
+    id: 5
     name: "no employee"
+    person_id: 5
     hashed_password: "1234"
     salt: "q"
 
-
 has_google_apps_account:
-    id: 4
-    person_id: 4
+    id: 6
     name: "has_google_apps_account"
+    person_id: 6
     hashed_password: "96043f0adf13e8d440a0e90ec7a2b7757a16bc2c"
     salt: "21757029800.1164294613723833"
     google_account: has_google_apps_account@wangsy.com
