--- a/test/fixtures/report_people.yml
+++ b/test/fixtures/report_people.yml
@@ -1,4 +1,4 @@
-admin_has_document:
+admin_has_expense_report_bank_transfer:
   id: 1
   person_id: 1
   report_id: 1
@@ -7,7 +7,7 @@ admin_has_document:
   updated_at: <%= Time.zone.now %>
   owner: t
 
-admin_has_export_report:
+admin_has_expense_report_cardbill:
   id: 2
   person_id: 1
   report_id: 2
@@ -16,10 +16,19 @@ admin_has_export_report:
   updated_at: <%= Time.zone.now %>
   owner: t
 
-admin_has_cardbill:
+admin_has_document:
   id: 3
   person_id: 1
   report_id: 3
+  prev_id:
+  created_at: <%= Time.zone.now %>
+  updated_at: <%= Time.zone.now %>
+  owner: t
+
+admin_has_cardbill:
+  id: 4
+  person_id: 1
+  report_id: 4
   prev_id:
   created_at: <%= Time.zone.now %>
   updated_at: <%= Time.zone.now %>
