--- a/test/fixtures/reports.yml
+++ b/test/fixtures/reports.yml
@@ -1,17 +1,23 @@
-document:
+admin_expense_report_bank_transfer:
     id: 1
+    target_id: 1
+    target_type: "ExpenseReport"
+    status: "not_reported"
+
+admin_expense_report_cardbill:
+    id: 2
+    target_id: 2
+    target_type: "ExpenseReport"
+    status: "not_reported"
+    
+document:
+    id: 3
     target_id: 1
     target_type: "Document"
     status: "not_reported"
 
-expense_report:
-    id: 2
-    target_id: 1
-    target_type: "ExpenseReport"
-    status: "not_reported"
-
 cardbill:
-    id: 3
-    target_id: 2
-    target_type: "ExpenseReport"
-    status: "reported"
+    id: 4
+    target_id: 1
+    target_type: "Cardbill"
+    status: "not_reported"
