--- a/test/fixtures/change_histories.yml
+++ b/test/fixtures/change_histories.yml
@@ -8,4 +8,4 @@ description:
   created_at: <%= Time.zone.now %>
   updated_at: <%= Time.zone.now %>
   target: Pettycash
-  employee_id: 1
+  user_id: 1
