--- a/test/fixtures/cardbills.yml
+++ b/test/fixtures/cardbills.yml
@@ -29,3 +29,19 @@ has_not_permission_cardbill:
   updated_at: <%= Time.zone.now %>
   attachment_id:
   creditcard_id: 1
+
+manager_has_cardbill:
+  id: 3
+  cardno:
+  transdate: <%= Time.zone.now %>
+  amount: 6200
+  vat: 500
+  servicecharge: 300
+  totalamount: 5400
+  storename: GS25
+  storeaddr: sk트윈타워 A동
+  approveno: 4
+  created_at: <%= Time.zone.now %>
+  updated_at: <%= Time.zone.now %>
+  attachment_id:
+  creditcard_id: 1
