--- a/test/fixtures/report_people.yml
+++ b/test/fixtures/report_people.yml
@@ -33,3 +33,39 @@ admin_has_cardbill:
   created_at: <%= Time.zone.now %>
   updated_at: <%= Time.zone.now %>
   owner: t
+
+manager_has_cardbill:
+  id: 5
+  person_id: 3
+  report_id: 5
+  prev_id:
+  created_at: <%= Time.zone.now %>
+  updated_at: <%= Time.zone.now %>
+  owner: t
+
+user_has_cardbill:
+  id: 6
+  person_id: 4
+  report_id: 5
+  prev_id: 5
+  created_at: <%= Time.zone.now %>
+  updated_at: <%= Time.zone.now %>
+  owner: t
+
+user_has_expense_report:
+  id: 7
+  person_id: 4
+  report_id: 6
+  prev_id:
+  created_at: <%= Time.zone.now %>
+  updated_at: <%= Time.zone.now %>
+  owner: t
+
+admin_has_expense_report:
+  id: 8
+  person_id: 1
+  report_id: 6
+  prev_id: 7
+  created_at: <%= Time.zone.now %>
+  updated_at: <%= Time.zone.now %>
+  owner: t
