--- a/test/fixtures/expense_reports.yml
+++ b/test/fixtures/expense_reports.yml
@@ -1,5 +1,17 @@
-cardbill:
+bankTransfer:
     id: 1
+    hrinfo_id: 1
+    target_id: 1
+    target_type: "BankTransfer"
+    project_id: 1
+    description: 이체내역 지출내역서
+    amount: 1000000
+    created_at: <%= Time.zone.now %>
+    updated_at: <%= Time.zone.now %>
+    expensed_at: <%= Time.zone.now %>
+
+cardbill:
+    id: 2
     hrinfo_id: 1
     target_id: 1
     target_type: "Cardbill"
@@ -10,14 +22,14 @@ cardbill:
     updated_at: <%= Time.zone.now %>
     expensed_at: <%= Time.zone.now %>
 
-bankTransfer:
-    id: 2
-    hrinfo_id: 1
-    target_id: 1
-    target_type: "BankTransfer"
+user_expense_report:
+    id: 3
+    hrinfo_id: 4
+    target_id: 3
+    target_type: "Cardbill"
     project_id: 1
-    description: 이체내역 지출내역서
-    amount: 1000000
+    description: 카드영수증 지출내역서
+    amount: 4500
     created_at: <%= Time.zone.now %>
     updated_at: <%= Time.zone.now %>
     expensed_at: <%= Time.zone.now %>
