--- a/test/fixtures/vacations.yml
+++ b/test/fixtures/vacations.yml
@@ -6,3 +6,13 @@ fixture:
   period: 10
   created_at: 2012-07-18 17:03:27.833767
   updated_at: 2012-07-18 17:03:27.833767
+
+
+old_user_vacation:
+  id: 2
+  user_id: 2
+  from: 2011-07-18
+  to: 2012-07-17
+  period: 10
+  created_at: 2011-07-18 17:03:27.833767
+  updated_at: 2011-07-18 17:03:27.833767
