--- a/test/fixtures/vacations.yml
+++ b/test/fixtures/vacations.yml
@@ -7,10 +7,9 @@ fixture:
   created_at: 2012-07-18 17:03:27.833767
   updated_at: 2012-07-18 17:03:27.833767
 
-
 old_user_vacation:
   id: 2
-  user_id: 2
+  employee_id: 2
   from: 2011-07-18
   to: 2012-07-17
   period: 10
