--- a/test/fixtures/companies.yml
+++ b/test/fixtures/companies.yml
@@ -6,7 +6,7 @@ fixture:
   pay_basic_date: 20
   payday: 25
   registration_number: 123-12-1234567
-  owner_name: 왕수용
+  owner_name: 김사장
   address: 가산동 가산디지털단지
   phone_number: 02-123-1234
   google_apps_domain: wangsy.com
