--- a/test/fixtures/project_assign_infos.yml
+++ b/test/fixtures/project_assign_infos.yml
@@ -1,9 +1,10 @@
-admin_regist_project_one:
+admin_regist_project:
   id: 1
   employee_id: 1
   project_id: 1
   created_at: <%= Time.zone.now %>
   updated_at: <%= Time.zone.now %>
+  owner: t
 
 cardbill_manager_registe_project:
   id: 2
@@ -11,6 +12,7 @@ cardbill_manager_registe_project:
   project_id: 1
   created_at: <%= Time.zone.now %>
   updated_at: <%= Time.zone.now %>
+  owner: f
 
 card_used_user_registe_project:
   id: 3
@@ -18,17 +20,4 @@ card_used_user_registe_project:
   project_id: 1
   created_at: <%= Time.zone.now %>
   updated_at: <%= Time.zone.now %>
-
-cardbill_manager_registe_project:
-  id: 2
-  employee_id: 3
-  project_id: 1
-  created_at: <%= Time.zone.now %>
-  updated_at: <%= Time.zone.now %>
-
-card_used_user_registe_project:
-  id: 3
-  employee_id: 4
-  project_id: 1
-  created_at: <%= Time.zone.now %>
-  updated_at: <%= Time.zone.now %>
+  owner: f
