--- a/test/fixtures/companies_people.yml
+++ b/test/fixtures/companies_people.yml
@@ -13,3 +13,27 @@ card_manager:
 card_user:
   company_id: 1
   person_id: 4
+
+no_employee:
+  company_id: 1
+  person_id: 5
+
+has_google_apps_account:
+  company_id: 1
+  person_id: 6
+
+google_account_user:
+  company_id: 1
+  person_id: 7
+
+daum_account_user:
+  company_id: 1
+  person_id: 8
+
+nate_account_user:
+  company_id: 1
+  person_id: 9
+
+retired_user:
+  company_id: 1
+  person_id: 10
