--- a/test/fixtures/people.yml
+++ b/test/fixtures/people.yml
@@ -18,3 +18,12 @@ has_google_apps_account:
 
 google_account_user:
   id: 7
+
+daum_account_user:
+  id: 8
+
+nate_account_user:
+  id: 9
+
+retired_user:
+  id: 10
