--- a/test/fixtures/contact_address_tags_contact_addresses.yml
+++ b/test/fixtures/contact_address_tags_contact_addresses.yml
@@ -1,3 +1,7 @@
 fixture:
   contact_address_tag_id: 1
   contact_address_id: 1
+
+new_employee:
+  contact_address_tag_id: 2
+  contact_address_id: 2
