--- a/test/fixtures/contact_emails.yml
+++ b/test/fixtures/contact_emails.yml
@@ -2,4 +2,10 @@ fixture:
   id: 1
   contact_id: 1
   target: 
-  email: wangsy@wangsy.com
+  email: test@test.com
+
+new_employee:
+  id: 2
+  contact_id: 6
+  target: 
+  email: new_employee@test.com
