--- a/test/fixtures/companies.yml
+++ b/test/fixtures/companies.yml
@@ -1,6 +1,6 @@
 fixture:
   id: 1
-  name: mintech
+  name: test
   created_at: 2012-07-18 16:07:56.123710
   updated_at: 2012-07-18 16:07:56.123710
   pay_basic_date: 20
@@ -9,11 +9,11 @@ fixture:
   owner_name: 김사장
   address: 가산동 가산디지털단지
   phone_number: 02-123-1234
-  google_apps_domain: wangsy.com
-  google_apps_accountname: zzilssun
+  google_apps_domain: test.com
+  google_apps_accountname: test
   google_apps_password: 1234
-  redmine_domain: redmine.mintech.kr
-  redmine_accountname: zzilssun
+  redmine_domain: redmine.test.kr
+  redmine_accountname: test
   redmine_password: 1234
   default_password: 1234
   apply_admin_id: 1
