--- a/test/fixtures/contact_address_tags.yml
+++ b/test/fixtures/contact_address_tags.yml
@@ -4,3 +4,10 @@ fixture:
   created_at: 2012-07-18 16:08:13.117074
   updated_at: 2012-07-18 16:08:13.117074
   company_id: 1
+
+company:
+  id: 2
+  name: 회사
+  created_at: 2012-07-18 16:08:13.117074
+  updated_at: 2012-07-18 16:08:13.117074
+  company_id: 1
