--- a/test/fixtures/contact_others.yml
+++ b/test/fixtures/contact_others.yml
@@ -5,3 +5,11 @@ fixture:
   description: 123
   created_at: 2012-07-18 16:08:13.117074
   updated_at: 2012-07-18 16:08:13.117074
+
+fixture:
+  id: 1
+  contact_id: 6
+  target: 홈페이지
+  description: 321
+  created_at: 2012-07-18 16:08:13.117074
+  updated_at: 2012-07-18 16:08:13.117074
