--- a/test/fixtures/contact_phone_number_tags_contact_phone_numbers.yml
+++ b/test/fixtures/contact_phone_number_tags_contact_phone_numbers.yml
@@ -1,3 +1,7 @@
 fixture:
   contact_phone_number_tag_id: 1
   contact_phone_number_id: 1
+
+new_employee:
+  contact_phone_number_tag_id: 2
+  contact_phone_number_id: 2
