--- a/test/fixtures/card_used_sources.yml
+++ b/test/fixtures/card_used_sources.yml
@@ -1,30 +1,30 @@
 exist_cardbill:
     id: 1
     creditcard_id: 1
-    card_no: 321-321-1234
-    bank_account: 
+    card_no: 9458-1300-5367-6004
+    bank_account: 321-123-123456
     bank_name: 신한은행
-    card_holder_name: 손어지리
-    used_area:
-    approve_no: 1
+    card_holder_name: 민트기술
+    used_area: 사무용품 구입
+    approve_no: 27001012
     approved_time: <%= Time.zone.now %>
-    sales_type:
+    sales_type: 
     money_krw:
     money_foreign:
-    price: 5800
-    tax: 123
-    tip: 123
-    monthly_duration: 3
-    exchange_krw: 300
+    price: 10908
+    tax: 1092
+    tip: 0
+    monthly_duration: 0
+    exchange_krw:
     foreign_country_code:
     foreign_country_name:
-    store_business_no: 123-321-12343
-    store_name: GS25
-    store_type: 편의점
-    store_zipcode: 123-321
-    store_addr1: sk트윈타워
-    store_addr2: A동
-    store_tel: 123-1234
+    store_business_no: 63971154
+    store_name: 버터플라이
+    store_type: 사무용품 판매
+    store_zipcode: 321-476
+    store_addr1: 서울 금천구
+    store_addr2: 가산동
+    store_tel: 02-7689-5362
 
 not_exist_cardbill:
     id: 2
@@ -32,7 +32,7 @@ not_exist_cardbill:
     card_no: 321-321-1234
     bank_account: 
     bank_name: 신한은행
-    card_holder_name: 손어지리
+    card_holder_name: 소유자
     used_area:
     approve_no: 3
     approved_time: <%= Time.zone.now %>
@@ -40,10 +40,10 @@ not_exist_cardbill:
     money_krw:
     money_foreign:
     price: 5800
-    tax: 123
-    tip: 123
-    monthly_duration: 3
-    exchange_krw: 300
+    tax: 0
+    tip: 200
+    monthly_duration: 0
+    exchange_krw:
     foreign_country_code:
     foreign_country_name:
     store_business_no: 123-321-12343
@@ -57,27 +57,27 @@ not_exist_cardbill:
 manager_cardbill:
     id: 3
     creditcard_id: 1
-    card_no: 321-321-1234
-    bank_account: 
+    card_no: 9458-1300-5367-6004
+    bank_account: 321-123-123456
     bank_name: 신한은행
-    card_holder_name: 손어지리
-    used_area:
+    card_holder_name: 민트기술
+    used_area: 사무용품 구입
     approve_no: 4
     approved_time: <%= Time.zone.now %>
-    sales_type:
+    sales_type: 
     money_krw:
     money_foreign:
-    price: 5800
-    tax: 123
-    tip: 123
-    monthly_duration: 3
-    exchange_krw: 300
+    price: 8908
+    tax: 1092
+    tip: 0
+    monthly_duration: 0
+    exchange_krw:
     foreign_country_code:
     foreign_country_name:
-    store_business_no: 123-321-12343
-    store_name: GS25
-    store_type: 편의점
-    store_zipcode: 123-321
-    store_addr1: sk트윈타워
-    store_addr2: A동
-    store_tel: 123-1234
+    store_business_no: 63971154
+    store_name: 버터플라이
+    store_type: 사무용품 판매
+    store_zipcode: 321-476
+    store_addr1: 서울 금천구
+    store_addr2: 가산동
+    store_tel: 02-7689-5362
