--- a/test/fixtures/expense_reports.yml
+++ b/test/fixtures/expense_reports.yml
@@ -13,7 +13,8 @@ bankTransfer:
 cardbill:
     id: 2
     employee_id: 1
-    target_id: 1
+    # target_id: 1
+    target_id: 2
     target_type: "Cardbill"
     project_id: 1
     description: 카드영수증 지출내역서
