--- a/test/fixtures/taxmen.yml
+++ b/test/fixtures/taxmen.yml
@@ -1,9 +1,19 @@
 fixture:
     id: 1
     business_client_id: 1
-    fullname: 왕 수용
-    email: wangsy@wangsy.com
+    fullname: 김 관리
+    email: admin@test.com
     phonenumber: 010-123-1234
     created_at: <%= Time.zone.now %>
     updated_at: <%= Time.zone.now %>
     person_id: 1
+
+fixture2:
+    id: 2
+    business_client_id: 2
+    fullname: 김 개똥
+    email: normal@test.com
+    phonenumber: 010-123-1236
+    created_at: <%= Time.zone.now %>
+    updated_at: <%= Time.zone.now %>
+    person_id: 2
