--- a/test/fixtures/business_clients.yml
+++ b/test/fixtures/business_clients.yml
@@ -1,11 +1,24 @@
 fixture:
     id: 1
-    name: 테스트 거래처
+    name: 테스트 거래처1
     registration_number: 123-321-1234
     category: 테스트
     business_status: 테스트 모듈
     address: MAC OS
     owner: MINT
+    created_at: <%= Time.zone.now %>
+    updated_at: <%= Time.zone.now %>
+    attachment_id:
+    company_id: 1
+
+fixture2:
+    id: 2
+    name: 테스트 거래처2
+    registration_number: 321-321-1234
+    category: 테스트2
+    business_status: 테스트 모듈2
+    address: MAC OS2
+    owner: MINT2
     created_at: <%= Time.zone.now %>
     updated_at: <%= Time.zone.now %>
     attachment_id:
