--- a/test/fixtures/people_permissions.yml
+++ b/test/fixtures/people_permissions.yml
@@ -46,6 +46,14 @@ projects:
   permission_id: 8
   person_id: 1
 
+projects_normal:
+  permission_id: 8
+  person_id: 2
+
+projects_manager:
+  permission_id: 8
+  person_id: 3
+
 business_clients:
   permission_id: 9
   person_id: 1
