--- a/test/fixtures/groups.yml
+++ b/test/fixtures/groups.yml
@@ -3,9 +3,18 @@ admin:
   name: "admin"
   created_at: 2012-07-18 16:08:13.062284
   updated_at: 2012-07-18 16:08:13.062284
+  parent_id: 1
 
 no_admin:
   id: 2
   name: "no_admin"
   created_at: 2012-07-18 16:08:13.062284
   updated_at: 2012-07-18 16:08:13.062284
+  parent_id: 1
+
+another_group:
+  id: 3
+  name: "another"
+  created_at: 2012-07-18 16:08:13.062284
+  updated_at: 2012-07-18 16:08:13.062284
+  parent_id: 1
